Modify project: Rename RestaurantReview id name to restaurantMenuId